--- a/src/t2fa_app/app/src/main/res/values/strings.xml
+++ b/src/t2fa_app/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">TestApp</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="notify">Notify</string>
+    <string name="first_fragment_label">Main Menu</string>
+    <string name="second_fragment_label">Authentication Page</string>
+    <string name="authenticate">Authenticate</string>
+    <string name="finish">Finish</string>
+    <string name="notify">Test Notification</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="intro_menu">Hello, thank you for your participation. Make sure you have your object prepared, then press the button to authenticate.</string>
+    <string name="authentication_text">Please do the authentication (Fix this text)</string>
 
     <string name="CHANNEL_ID">t2fa</string>
     <string name="channel_name">T2FA User Study app</string>
