Added changed to the second fragments and handling of the text views and buttons to the auth activity to make app more interactive. Noticed during a manual test that the second fragment isn't linked to the auth view, so I'll need to sort that out and either figure out how to link them or collapse them into one

--- a/src/t2fa_app/app/src/main/res/values/strings.xml
+++ b/src/t2fa_app/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
 
     <string name="intro_menu">Hello, thank you for your participation. Make sure you have your object prepared, then press the button to authenticate.</string>
     <string name="authentication_text">Please ensure you have your model ready, then give the screen a tap to start</string>
+    <string name="start_text">Please get your model ready and tap the screen to start</string>
+    <string name="end_text">Thank you for participating, please return to the main menu and close the app</string>
 
     <string name="CHANNEL_ID">t2fa</string>
     <string name="channel_name">T2FA User Study app</string>
