--- a/src/t2fa_app/app/src/main/res/values/strings.xml
+++ b/src/t2fa_app/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">TestApp</string>
     <string name="action_settings">Settings</string>
+    <string name="action_save">Save log</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">Main Menu</string>
     <string name="second_fragment_label">Authentication Page</string>
