Altered the method of collecting touch points a lot, instead only logging touch down actions and sending them to set points on a touch up, unfortunately, size still can't be read, but I was told this may be a phone issue, s not much I can do there. The credit card has been tested and works, although better models should be a bit thicker so the screen doesn't register touches through the plastic. A start has also been made on the dissertation, with some draft introduction, abstract conclusion and notes in some other areas that I'll consider when I get to them. I have also added some of the altered models to the repo, as you can tell, I've been stuck on this code problem for a bit and didn't want to commit in case something broke, and in that time I did a bunch of backgroudn stuff

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -11,9 +11,9 @@
 
 %==============================================================================
 %% METADATA
-\title{Level 4 Project Report Template}
-\author{John H. Williamson}
-\date{September 14, 2018}
+\title{Tangible 2-Factor Authentication}
+\author{Mark Turner}
+\date{January 26, 2022}
 
 \maketitle
 
@@ -26,6 +26,8 @@
     ABC used XXX and YYY to implement ZZZ. This is particularly interesting as XXX and YYY have
     never been used together. It was found that  
     ABC was 20\% better than XYZ, though it caused rabies in half of subjects.''
+   \vskip 0.5em
+   ``Two-factor authentication is already a widely used and recommended method of securing one's data, however most of the preferred solutions tend to remain in the digital space.  This project investigated the usability of tangible, 3D-printed objects that made use of a conductive form of plastic to interact with a capacitive touch screen. Building on the prototyping done by Marky et al. this paper finds whether these types of models can compare to existing two-factor authentication solutions while proposing potentially viable developed models and assessing them in a (2?) week long study. This is a particularly intresting area with 3D-printing, while still being in its infancy, may offer an easy way to provide tangible security in the future, an area which in the past has failed. It was found during the user study that --hopefully the models stand up to current 2-factor authentication methods, potentially leading to further development of tangible security for mobile devices as 3D-printing develops as well as showing a clear increase in performance over the (2?) weeks indicating that retention of the methods of use was good. --orrrr, that the current models proved to be too cumbersome for users to utilise as authentication methods and ended up as impractical and difficult to use, suggesting that the convenience offered by purely digital methods will lead to continued focus over methods such as this. ``
 \end{abstract}
 
 %==============================================================================
@@ -39,8 +41,8 @@
 % Please note that you are under no obligation to sign 
 % this declaration, but doing so would help future students.
 %
-%\def\consentname {My Name} % your full name
-%\def\consentdate {20 March 2018} % the date you agree
+%\def\consentname {Mark Turner} % your full name
+%\def\consentdate {26 January 2022} % the date you agree
 %
 \educationalconsent
 
@@ -82,6 +84,14 @@
 
 
 Why should the reader care about what are you doing and what are you actually doing?
+
+Things to discuss for me:
+The reason for authentications - ie the reason to even look at this
+Current two-factor authentication methods
+Why these methods are prevalent/ the failings of other tangible 2fa methods
+The current spread of 3D printing and why this technology would be useful for this task
+Reuasibility of these models without compromising security like with passwords and such due to the 2 factor nature being built in to the object (knowledge and ownership)
+
 \section{Guidance}
 
 \textbf{Motivate} first, then state the general problem clearly. 
@@ -171,6 +181,17 @@ What did other people do, and how is it relevant to what you want to do?
 %==================================================================================================================================
 \chapter{Analysis/Requirements}
 What is the problem that you want to solve, and how did you arrive at it?
+
+Upon analysis, it was clear that there was to be 4 main areas of development: design of potential models, deveopment of said model designs into physical models, creation of an app to simulate the use of authentication throughout the day, and design and analysis of a user study. Here, each of these main areas will be discussed in turn.
+
+\section{Designing Models}
+
+\section{Transition to the Tangible}
+
+\section{Authentication Application}
+
+\section{Study}
+
 \section{Guidance}
 Make it clear how you derived the constrained form of your problem via a clear and logical process. 
 
@@ -419,6 +440,9 @@ See the file \texttt{guide\_to\_visualising.pdf} for further information and gui
 %==================================================================================================================================
 \chapter{Conclusion}    
 Summarise the whole project for a lazy reader who didn't read the rest (e.g. a prize-awarding committee).
+
+This paper investigated the usability and ease of retention of 3D-printed authentication objects, discussing previous work done in the area, the methodology used to develop new models to be evaluated and the potential future of this area. It was found that --users were bad at using them, definitely through no fault of my own --users enjoyed the experience of using them and they measured up well to existing methods of authentication --plus maybe some other comments here. It can be seen that the future of tangible authentication is --good --bad
+
 \section{Guidance}
 \begin{itemize}
     \item
@@ -435,6 +459,10 @@ Summarise the whole project for a lazy reader who didn't read the rest (e.g. a p
 \end{itemize}
 
 %==================================================================================================================================
+\chapter{Acknowledgements}
+This paper would not have been possible without the help of my colleague Laszlo Besenyei at the University of Strathclyde, who provided a great service with the digital modelling of the objects, as well as Mohammed Khamis, who allowed me to intrude on his office for more than three months. I would also like to thank Karola Marky, my supervisor on this project, for lending her knowledge from the 3D-Auth paper.
+
+%==================================================================================================================================
 %
 % 
 %==================================================================================================================================
@@ -443,6 +471,8 @@ Summarise the whole project for a lazy reader who didn't read the rest (e.g. a p
 \begin{appendices}
 
 \chapter{Appendices}
+
+Things I'm gonna need for the appendices - Ethics approval forms, the survey(s) used, other documents created for use by participants, model designs(?)
 
 Typical inclusions in the appendices are:
 
