Added pictures of credit card use to model instructions, continued changing gcode to make quicker

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -1,46 +1,106 @@
-@inproceedings{Pey17,
-  author    = {Simon {Peyton Jones}},
-  title     = {How to Write a Great Research Paper},
-  booktitle = {2017 Imperial College Computing Student Workshop, {ICCSW} 2017, September
-               26-27, 2017, London, {UK}},
-  pages     = {1:1--1:1},
-  year      = {2017},    
-  
+@inproceedings{marky20203d,
+  title={3D-Auth: Two-Factor Authentication with Personalized 3D-Printed Items},
+  author={Marky, Karola and Schmitz, Martin and Zimmermann, Verena and Herbers, Martin and Kunze, Kai and M{\"u}hlh{\"a}user, Max},
+  booktitle={Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems},
+  pages={1--12},
+  year={2020}
 }
 
-@book{Wil09,
-  title={Style: the basics of clarity and grace},
-  author={Williams, Joseph M and Bizup, Joseph},
-  year={2009},
-  publisher={Pearson Longman}
+@inproceedings{schmitz2021itsy,
+  title={Itsy-Bits: Fabrication and Recognition of 3D-Printed Tangibles with Small Footprints on Capacitive Touchscreens},
+  author={Schmitz, Martin and M{\"u}ller, Florian and M{\"u}hlh{\"a}user, Max and Riemann, Jan and Le, Huy Viet Viet},
+  booktitle={Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+  pages={1--12},
+  year={2021}
 }
 
-@book{Pin15,
-  title={The sense of style: The thinking person's guide to writing in the 21st century},
-  author={Pinker, Steven},
-  year={2015},
-  publisher={Penguin Books}
+@inproceedings{schmitz2018off,
+  title={Off-line sensing: Memorizing interactions in passive 3D-printed objects},
+  author={Schmitz, Martin and Herbers, Martin and Dezfuli, Niloofar and G{\"u}nther, Sebastian and M{\"u}hlh{\"a}user, Max},
+  booktitle={Proceedings of the 2018 chi conference on human factors in computing systems},
+  pages={1--8},
+  year={2018}
 }
 
-@book{StrWhi07,
-  title={The Elements of style},
-  author={Strunk, William and Whyte, EB},
-  year={2007},
-  publisher={Penguin}
+@article{leigh2012simple,
+  title={A simple, low-cost conductive composite material for 3D printing of electronic sensors},
+  author={Leigh, Simon J and Bradley, Robert J and Purssell, Christopher P and Billson, Duncan R and Hutchins, David A},
+  journal={PloS one},
+  volume={7},
+  number={11},
+  pages={e49365},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
 }
 
-@book{Von80,
-  title={How to write with style},
-  author={Vonnegut, Kurt},
-  year={1980},
-  publisher={International Paper Company}
+@inproceedings{reese2019usability,
+  title={A usability study of five two-factor authentication methods},
+  author={Reese, Ken and Smith, Trevor and Dutson, Jonathan and Armknecht, Jonathan and Cameron, Jacob and Seamons, Kent},
+  booktitle={Fifteenth Symposium on Usable Privacy and Security ($\{$SOUPS$\}$ 2019)},
+  pages={357--370},
+  year={2019}
 }
 
-@incollection{Orw68,
-  title={Politics and the {English} language},
-  author={Orwell, George},
-  booktitle={The collected essays, journalism and letters of George Orwell},
-  pages={127--140},
-  year={1968},
-  publisher={Harcourt, Brace, Javanovich}
+@article{abbas2018influence,
+  title={Influence of layer thickness on impact property of 3D-printed PLA},
+  author={Abbas, Tahseen Fadhil and Othman, Farhad Mohammad and Ali, Hind Basil},
+  journal={Int. Res. J. Eng. Technol.(Irjet)},
+  volume={5},
+  pages={1--4},
+  year={2018}
+}
+
+@article{payne2016responsibility,
+  title={Responsibility and tangible security: Towards a theory of user acceptance of security tokens},
+  author={Payne, Jeunese and Jenkinson, Graeme and Stajano, Frank and Sasse, M Angela and Spencer, Max},
+  journal={arXiv preprint arXiv:1605.03478},
+  year={2016}
+}
+
+@inproceedings{bianchi2010phone,
+  title={The phone lock: audio and haptic shoulder-surfing resistant PIN entry methods for mobile devices},
+  author={Bianchi, Andrea and Oakley, Ian and Kostakos, Vassilis and Kwon, Dong Soo},
+  booktitle={Proceedings of the fifth international conference on Tangible, embedded, and embodied interaction},
+  pages={197--200},
+  year={2010}
+}
+
+@inproceedings{chen2008tangible,
+  title={Tangible security for mobile devices},
+  author={Chen, YuQun and Sinclair, Michael},
+  booktitle={Proceedings of the 5th Annual International Conference on Mobile and Ubiquitous Systems: Computing, Networking, and Services},
+  pages={1--4},
+  year={2008}
+}
+
+@inproceedings{kato20163d,
+  title={3d printed physical interfaces that can extend touch devices},
+  author={Kato, Kunihiro and Miyashita, Homei},
+  booktitle={Proceedings of the 29th Annual Symposium on User Interface Software and Technology},
+  pages={47--49},
+  year={2016}
+}
+
+@inproceedings{mayer2021super,
+  title={Super-Resolution Capacitive Touchscreens},
+  author={Mayer, Sven and Xu, Xiangyu and Harrison, Chris},
+  booktitle={Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+  pages={1--10},
+  year={2021}
+}
+
+@inproceedings{schmitz2019trilaterate,
+  title={./trilaterate: A Fabrication Pipeline to Design and 3D Print Hover-, Touch-, and Force-Sensitive Objects},
+  author={Schmitz, Martin and Stitz, Martin and M{\"u}ller, Florian and Funk, Markus and M{\"u}hlh{\"a}user, Max},
+  booktitle={Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
+  pages={1--13},
+  year={2019}
+}
+
+@inproceedings{yu2011tuic,
+  title={TUIC: enabling tangible interaction on capacitive multi-touch displays},
+  author={Yu, Neng-Hao and Chan, Li-Wei and Lau, Seng Yong and Tsai, Sung-Sheng and Hsiao, I-Chun and Tsai, Dian-Je and Hsiao, Fang-I and Cheng, Lung-Pan and Chen, Mike and Huang, Polly and others},
+  booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages={2995--3004},
+  year={2011}
 }
