--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -20,14 +20,7 @@
 %==============================================================================
 %% ABSTRACT
 \begin{abstract}
-    Every abstract follows a similar pattern. Motivate; set aims; describe work; explain results.
-    \vskip 0.5em
-    ``XYZ is bad. This project investigated ABC to determine if it was better. 
-    ABC used XXX and YYY to implement ZZZ. This is particularly interesting as XXX and YYY have
-    never been used together. It was found that  
-    ABC was 20\% better than XYZ, though it caused rabies in half of subjects.''
-   \vskip 0.5em
-   ``Two-factor authentication is already a widely used and recommended method of securing one's data, however most of the preferred solutions tend to remain in the digital space.  This project investigated the usability of tangible, 3D-printed objects that made use of a conductive form of plastic to interact with a capacitive touch screen. Building on the prototyping done by Marky et al. this paper finds whether these types of models can compare to existing two-factor authentication solutions while proposing potentially viable developed models and assessing them in a (2?) week long study. This is a particularly intresting area with 3D-printing, while still being in its infancy, may offer an easy way to provide tangible security in the future, an area which in the past has failed. It was found during the user study that --hopefully the models stand up to current 2-factor authentication methods, potentially leading to further development of tangible security for mobile devices as 3D-printing develops as well as showing a clear increase in performance over the (2?) weeks indicating that retention of the methods of use was good. --orrrr, that the current models proved to be too cumbersome for users to utilise as authentication methods and ended up as impractical and difficult to use, suggesting that the convenience offered by purely digital methods will lead to continued focus over methods such as this. ``
+   ``Two-factor authentication is already a widely used and recommended method of securing one's data, however most of the preferred solutions tend to remain in the digital space.  This project investigated the usability of tangible, 3D-printed objects that made use of a conductive form of plastic to interact with a capacitive touch screen. Building on the prototyping done by Marky et al. this paper finds whether these types of models can compare to existing two-factor authentication solutions while proposing potentially viable developed models and assessing them in a week long study. This is a particularly intresting area with 3D-printing, and while still being in its infancy, may offer an easy way to provide tangible security in the future, an area which in the past has failed. It was found during the user study that --hopefully the models stand up to current 2-factor authentication methods, potentially leading to further development of tangible security for mobile devices as 3D-printing develops as well as showing a clear increase in performance over the week indicating that retention of the methods of use was good. --or, that the current models proved to be too cumbersome for users to utilise as authentication methods and ended up as impractical and difficult to use, suggesting that the convenience offered by purely digital methods will lead to continued focus over methods such as this. ``
 \end{abstract}
 
 %==============================================================================
@@ -90,7 +83,7 @@ The reason for authentications - ie the reason to even look at this
 Current two-factor authentication methods
 Why these methods are prevalent/ the failings of other tangible 2fa methods
 The current spread of 3D printing and why this technology would be useful for this task
-Reuasibility of these models without compromising security like with passwords and such due to the 2 factor nature being built in to the object (knowledge and ownership)
+Reusibility of these models without compromising security like with passwords and such due to the 2 factor nature being built in to the object (knowledge and ownership)
 
 \section{Guidance}
 
@@ -182,11 +175,11 @@ What did other people do, and how is it relevant to what you want to do?
 \chapter{Analysis/Requirements}
 What is the problem that you want to solve, and how did you arrive at it?
 
-Upon analysis, it was clear that there was to be 4 main areas of development: design of potential models, deveopment of said model designs into physical models, creation of an app to simulate the use of authentication throughout the day, and design and analysis of a user study. Here, each of these main areas will be discussed in turn.
+Upon analysis, it was clear that there was to be 4 main areas of development: analysis of the survey research, design and development of potntial models, creation of an app to simulate the use of authentication throughout the day, and design and analysis of a user study. Here, each of these main areas will be discussed in turn.
 
-\section{Designing Models}
+\section{Survey Analysis}
 
-\section{Transition to the Tangible}
+\section{Model Creation}
 
 \section{Authentication Application}
 
