Added name for app

--- a/src/t2fa_app/app/src/main/res/values/strings.xml
+++ b/src/t2fa_app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TestApp</string>
+    <string name="app_name">T2FA Study App</string>
     <string name="action_settings">Settings</string>
     <string name="action_save">Save log</string>
     <!-- Strings used for fragments for navigation -->
