Aded presentation, final dissertation copy, and a restructuring of some folders and rewriting of some readmes

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -112,6 +112,62 @@
   year={2019}
 }
 
+@inproceedings{10.5555/3235838.3235860,
+author = {Stobert, Elizabeth and Biddle, Robert},
+title = {The Password Life Cycle: User Behaviour in Managing Passwords},
+year = {2014},
+isbn = {9781931971133},
+publisher = {USENIX Association},
+address = {USA},
+booktitle = {Proceedings of the Tenth USENIX Conference on Usable Privacy and Security},
+pages = {243–255},
+numpages = {13},
+location = {Menlo Park, CA},
+series = {SOUPS '14}
+}
+
+@inproceedings{10.5555/3235866.3235877,
+author = {Ur, Blase and Noma, Fumiko and Bees, Jonathan and Segreti, Sean M. and Shay, Richard and Bauer, Lujo and Christin, Nicolas and Cranor, Lorrie Faith},
+title = {“I Added '!' at the End to Make It Secure”: Observing Password Creation in the Lab},
+year = {2015},
+isbn = {9781931971249},
+publisher = {USENIX Association},
+address = {USA},
+booktitle = {Proceedings of the Eleventh USENIX Conference on Usable Privacy and Security},
+pages = {123–140},
+numpages = {18},
+location = {Ottawa, Canada},
+series = {SOUPS '15}
+}
+
+@INPROCEEDINGS{9152694,
+  author={Ghorbani Lyastani, Sanam and Schilling, Michael and Neumayr, Michaela and Backes, Michael and Bugiel, Sven},
+  booktitle={2020 IEEE Symposium on Security and Privacy (SP)}, 
+  title={Is FIDO2 the Kingslayer of User Authentication? A Comparative Usability Study of FIDO2 Passwordless Authentication}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={268-285},
+  doi={10.1109/SP40000.2020.00047}
+}
+
+@inproceedings{das2018johnny,
+  title={Why Johnny doesn’t use two factor a two-phase usability study of the FIDO U2F security key},
+  author={Das, Sanchari and Dingman, Andrew and Camp, L Jean},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  pages={160--179},
+  year={2018},
+  organization={Springer}
+}
+
+@inproceedings{sherman2014user,
+  title={User-generated free-form gestures for authentication: Security and memorability},
+  author={Sherman, Michael and Clark, Gradeigh and Yang, Yulong and Sugrim, Shridatt and Modig, Arttu and Lindqvist, Janne and Oulasvirta, Antti and Roos, Teemu},
+  booktitle={Proceedings of the 12th annual international conference on Mobile systems, applications, and services},
+  pages={176--189},
+  year={2014}
+}
+
 @inproceedings{dmitrienko2014security,
   title={On the (in) security of mobile two-factor authentication},
   author={Dmitrienko, Alexandra and Liebchen, Christopher and Rossow, Christian and Sadeghi, Ahmad-Reza},
@@ -322,7 +378,25 @@ series = {CHI '12}
 @misc{wallthickness,
   title={Recommended Wall Thickness for 3D Printing},
   howpublished={\url{https://www.fictiv.com/articles/recommended-wall-thickness-for-3d-printing}},
-  note={Accessed 2021-11-12}
+  note={Accessed 2021-11-12},
+  author={Team Fictiv},
+  year={2021}
+}
+
+@misc{prusaprinter,
+    title={Original Prusa i3 MK3S+ | Original Prusa 3D printers directly from Josef Prusa},
+    howpublished={\url{https://www.prusa3d.com/category/original-prusa-i3-mk3s/}},
+    note={Accessed 2022-03-28},
+    author={Prusa, Josef},
+    year={2022}
+}
+
+@misc{prusammu,
+    title={Original Prusa i3 MMU2S upgrade kit (for MK2.5S & MK3S/+) - ORG | Original Prusa 3D printers directly from Josef Prusa},
+    howpublished={\url{https://www.prusa3d.com/product/original-prusa-i3-mmu2s-upgrade-kit-for-mk2-5s-mk3s-org/}},
+    note={Accessed 2022-03-28},
+    author={Prusa, Josef},
+    year={2022}
 }
 
 @inproceedings{schmitz2015capricate,
@@ -331,14 +405,6 @@ series = {CHI '12}
   booktitle={Proceedings of the 28th Annual ACM Symposium on User Interface Software \& Technology},
   pages={253--258},
   year={2015}
-}
-
-@inproceedings{mayer2021super,
-  title={Super-Resolution Capacitive Touchscreens},
-  author={Mayer, Sven and Xu, Xiangyu and Harrison, Chris},
-  booktitle={Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
-  pages={1--10},
-  year={2021}
 }
 
 @article{zimmermann2020password,
@@ -361,6 +427,27 @@ pages = {77-101},
 year  = {2006},
 publisher = {Routledge},
 doi = {10.1191/1478088706qp063oa},
+}
+
+@article{10.1145/3503514,
+author = {Marky, Karola and Ragozin, Kirill and Chernyshov, George and Matviienko, Andrii and Schmitz, Martin and M\"{u}hlh\"{a}user, Max and Eghtebas, Chloe and Kunze, Kai},
+title = {”Nah, It’s Just Annoying!” A Deep Dive into User Perceptions of Two-Factor Authentication},
+year = {2021},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/3503514},
+doi = {10.1145/3503514},
+note = {Just Accepted},
+journal = {ACM Trans. Comput.-Hum. Interact.}
+}
+
+@misc{duo,
+    title={Two-Factor Authentication Methods - Tokens & Passcodes | Duo Security},
+    year={2019},
+    author={Duo Security},
+    howpublished={\url{https://duo.com/product/trusted-users/two-factor-authentication/authentication-methods/security-tokens}},
+    note={Accessed 2022-03-28}
 }
 
   
